<resources>
  <string name="app_name">Beseye</string>
  <string name="connect">Connect</string>
  <string name="cancel">Cancel</string>
  <string name="done">Done</string>
  <string name="ok">OK</string>
  <string name="yes">Yes</string>
  <string name="select">Select</string>
  <string name="password">Password</string>
  <string name="show_password">Show password</string>
  <string name="forget_password">Forgot password?</string>
  <string name="username">Email</string>
  <string name="hint_to_create_account">Do not have an account?</string>
  <string name="account_create">Create account</string>
  <string name="login">Login</string>
  <string name="remove">Remove</string>
  <string name="cont">Continue</string>
  <string name="watch_out_sound">Sound reminder</string>
  <string name="password_hint">Use at least 6 characters, containing both letters and numbers.</string>
  <string name="action_settings">Settings</string>
  <string name="event_cam_view">Event</string>
  <string name="event_go_live">Go Live</string>
  <string name="event_itm_live">Live</string>
  <string name="can_power_state_off">This camera is off</string>
  <string name="can_power_state_disconnect">This camera is not connected</string>
  <string name="cam_setting_title_detach_cam">Remove camera</string>
  <string name="dialog_dettach_cam">Camera [%s] and its cloud video recordings will also be removed, are you sure?</string>
  <string name="network_ssid">Network SSID</string>
  <string name="network_other">Other…</string>
  <string name="menu_scan">Scan</string>
  <string name="network_scanning">Scanning…</string>
  <string name="title_add_network">Add Network Connections</string>
  <string name="network_secure_with">Secured with %s </string>
  <string name="network_avoid_poor_network">Avoid poor internet connection…</string>
  <string name="network_authenticating">Authenticating…</string>
  <string name="network_obtaining_ip">Obtaining IP address…</string>
  <string name="network_connecting">Connecting…</string>
  <string name="network_connected">Connected</string>
  <string name="network_disconnecting">Disconnecting…</string>
  <string name="network_disconnected">Disconnected</string>
  <string name="network_suspended">Suspended</string>
  <string name="network_failed">Failed</string>
  <string name="network_idle">Idle</string>
  <string name="network_blocked">Blocked</string>
  <string name="title_timezone">Select Time Zone</string>
  <string name="zone_list_menu_sort_alphabetically">Sort alphabetically</string>
  <string name="zone_list_menu_sort_by_timezone">Sort by timezone</string>
  <string name="dialog_title_warning">Warning</string>
  <string name="dialog_title_info">Info</string>
  <string name="dialog_no_connectivity">Please check your network connection.</string>
  <string name="dialog_loading">Loading…</string>
  <string name="dialog_setting">Setting…</string>
  <string name="dialog_syncing">Syncing…</string>
  <string name="dialog_wifi_turning_on">Turning on Wi-Fi…</string>
  <string name="dialog_wifi_scanning">Scanning Wi-Fi AP…</string>
  <string name="dialog_wifi_setting">Setting up Wi-Fi AP…</string>
  <string name="dialog_wifi_fail_on">Cannot turn on Wi-Fi, please check Wi-Fi status on your device.</string>
  <string name="dialog_wifi_fail_scan">Cannot scan Wi-Fi, please check Wi-Fi status on your device.</string>
  <string name="dialog_wifi_incorrect_password">The network password is incorrect. Please try again.</string>
  <string name="dialog_wifi_incorrect_password_wep">Unable to connect due to an incorrect password or network issues.\nWould you like to try again?</string>
  <string name="dialog_wifi_fail_to_connect">Cannot connect to Wi-Fi AP [%s].\nPlease check if it is available.</string>
  <string name="dialog_wifi_invalid_connectivity">Wi-Fi AP %s has connection issues. Please choose another Wi-Fi AP or try again.</string>
  <string name="dialog_wifi_ap_signal">Signal strength</string>
  <string name="dialog_wifi_ap_signal_Excellent">Excellent</string>
  <string name="dialog_wifi_ap_signal_Good">Good</string>
  <string name="dialog_wifi_ap_signal_Fair">Fair</string>
  <string name="dialog_wifi_ap_signal_Poor">Poor</string>
  <string name="dialog_wifi_ap_key_index">Key index</string>
  <string name="dialog_wifi_ap_security">Security</string>
  <string name="dialog_wifi_ap_security_none">None</string>
  <string name="title_event_filter">Event filter</string>
  <string name="notification_event_people">People</string>
  <string name="notification_event_motion">Motion</string>
  <string name="notification_event_fire">Fire</string>
  <string name="notification_event_sound">Sound</string>
  <string name="cam_setting_title">Settings</string>
  <string name="cam_hardware_setting_title">Hardware settings</string>
  <string name="cam_setting_title_power_setting">Power settings</string>
  <string name="cam_setting_title_power">Camera power</string>
  <string name="cam_setting_title_power_time">Power schedule</string>
  <string name="cam_setting_title_Location_aware">Location awareness</string>
  <string name="cam_setting_title_location">Location awareness</string>
  <string name="cam_setting_title_setlocation">Location settings</string>
  <string name="cam_setting_title_notification_setting">Notification settings</string>
  <string name="cam_setting_title_notification_event">Notification events</string>
  <string name="cam_setting_title_family_recognition">Family recognition</string>
  <string name="cam_setting_title_hardware_setting">Hardware settings</string>
  <string name="cam_setting_title_hardware_setting_inf">Hardware settings</string>
  <string name="cam_setting_title_special_functions">Misc function</string>
  <string name="cam_setting_title_emergency_siren">Emergency siren</string>
  <string name="cam_setting_title_camera_inf">Camera information</string>
  <string name="cam_setting_title_power_on">on</string>
  <string name="cam_setting_title_power_off">off</string>
  <string name="cam_setting_title_power_disconnected">disconnected</string>
  <string name="cam_setting_title_notification_event_notify_me">Notify me</string>
  <string name="cam_setting_title_notification_event_people_detect">People detected</string>
  <string name="cam_setting_title_notification_event_motion_detect">Motion detected</string>
  <string name="cam_setting_title_notification_event_fire_detect">Fire detected</string>
  <string name="cam_setting_title_notification_event_sound_detect">Sound detected</string>
  <string name="cam_setting_title_notification_event_offline_detect">Offline</string>
  <string name="cam_setting_fail_to_update_cam_status">Fail to update camera status. Please try again later.</string>
  <string name="cam_setting_fail_to_update_hd_quality">Fail to update video upload quality. Please try again later.</string>
  <string name="cam_setting_fail_to_update_notify_setting">Fail to update notification settings. Please try again later.</string>
  <string name="cam_setting_fail_to_update_led_status">Fail to update status light. Please try again later.</string>
  <string name="cam_setting_fail_to_update_mic_status">Fail to update microphone status. Please try again later.</string>
  <string name="cam_setting_fail_to_update_mic_sensitivity">Fail to update microphone status. Please try again later.</string>
  <string name="cam_setting_fail_to_update_wifi_setting">Fail to update Wi-Fi setting. Please try again later.</string>
  <string name="cam_setting_fail_to_update_timezone">Fail to update timezone. Please try again later.</string>
  <string name="cam_setting_fail_to_update_night_vision">Fail to update night vision. Please try again later.</string>
  <string name="cam_setting_fail_to_update_video_upside_down">Fail to update video upside-down. Please try again later.</string>
  <string name="cam_setting_fail_to_get_cam_info">Fail to get camera info. Please try again later.</string>
  <string name="cam_setting_fail_to_update_schdule_status">Fail to update schedule. Please try again later.</string>
  <string name="cam_setting_schedule_add">Create..</string>
  <string name="cam_setting_fail_to_add_schdule">Fail to create schedule. Please try again later.</string>
  <string name="cam_setting_fail_to_update_schdule">Fail to update schedule. Please try again later.</string>
  <string name="cam_setting_fail_to_del_schdule">Fail to delete schedule. Please try again later.</string>
  <string name="cam_setting_wifi_setting_apply">Wi-Fi config is applying. Please wait for a while.</string>
  <string name="cam_setting_fail_to_apply_wifi_setting">Cannot apply to new Wi-Fi.</string>
  <string name="cam_setting_succeed_to_apply_wifi_setting">Apply to new Wi-Fi.</string>
  <string name="cam_setting_fail_to_get_wifi_list">Fail to get Wi-Fi list from camera. Please try again later.</string>
  <string name="cam_setting_hw_mic_sensitivity_title">Camera microphone</string>
  <string name="cam_setting_hw_status_light_title">Status light</string>
  <string name="cam_setting_hw_night_vision_title">Night vision</string>
  <string name="cam_setting_hw_night_vision_auto">Auto</string>
  <string name="cam_setting_hw_night_vision_on">On</string>
  <string name="cam_setting_hw_night_vision_off">Off</string>
  <string name="cam_setting_hw_timezone_title">Time zone</string>
  <string name="cam_setting_title_video_upside_down">Video upside-down</string>
  <string name="cam_setting_title_wifi_setting">Wi-Fi setting</string>
  <string name="cam_setting_title_cam_info">Camera information</string>
  <string name="cam_setting_empty_name_warning">Camera name cannot be blank.</string>
  <string name="cam_info_cam_name">Camera name</string>
  <string name="cam_info_sw_ver">Software version</string>
  <string name="cam_info_sn">Serial number</string>
  <string name="cam_info_mac">MAC address</string>
  <string name="unknown">N/A</string>
  <string name="server_error">Network or server error. Please try again later.</string>
  <string name="streaming_invalid_dvr">Invalid Cloud Video Recording path. </string>
  <string name="streaming_no_more_dvr">No Cloud Video Recording can play.</string>
  <string name="streaming_playing_error">Invalid Cloud Video Recording path or server error. Please try again later.</string>
  <string name="streaming_error_no_network">Please check out your network connection.</string>
  <string name="streaming_error_unknown">Unknown error. Please try again later.</string>
  <string name="streaming_error_low_mem">App is unstable due to lack of memory. Please launch it again.</string>
  <string name="signup_createAccount_description_title">By continuing, I agree to Beseye\'s</string>
  <string name="signup_createAccount_description_terms">Terms of service</string>
  <string name="signup_createAccount_description_and">and</string>
  <string name="signup_createAccount_description_policy">Privacy Policy</string>
  <string name="signup_try_again_description_1">Please plug in your camera, enter the correct Wi-Fi password, and start Let it Bee™ when the green light is twinkleing. Also make sure to keep your device near the camera within 10 cms.</string>
  <string name="signup_try_again_description_2">Still have problems? Refer to our</string>
  <string name="signup_try_again_description_3">Setting Guide</string>
  <string name="signup_try_again_btn">Ok, let\'s go</string>
  <string name="datetime_hour">Hour</string>
  <string name="datetime_min">Minute</string>
  <string name="recognition_percentage">Optimization progress：%s</string>
  <string name="enhance_human_detect_reward_desc">, Recognition rate are enhanced！</string>
  <string name="desc_faq_intro">If the update process did not complete successfully, please contact us for further assistance.</string>
  <string name="desc_user_name">Name</string>
  <string name="desc_user_email">E-mail</string>
  <string name="desc_user_phone">Phone</string>
  <string name="desc_user_question">Question…</string>
  <string name="action_submit">Submit</string>
</resources>