<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signup_bg_color" >

    <ImageView
        android:id="@+id/iv_create_account_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_bottom_description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/signup_createAccount_description_margin"
        android:src="@drawable/signup_create_ill" />
    
    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/signup_createAccount_username_marginTop"
        android:layout_marginBottom="@dimen/signup_createAccount_username_marginBottom"
        android:layout_marginLeft="@dimen/signup_firstPage_bottom_btn_marginSide"
	    android:layout_marginRight="@dimen/signup_firstPage_bottom_btn_marginSide"
        android:background="@drawable/sl_signup_create_account_input"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/login_marginMedium"
        android:paddingRight="@dimen/login_marginMedium"
        android:textSize="@dimen/login_fontRegular" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/signup_firstPage_bottom_btn_marginSide"
	    android:layout_marginRight="@dimen/signup_firstPage_bottom_btn_marginSide"
        android:background="@drawable/sl_signup_create_account_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/login_marginMedium"
        android:paddingRight="@dimen/login_marginMedium"
        android:textSize="@dimen/login_fontRegular" />
    
    <TextView 
        android:id="@+id/txt_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/signup_font_description_color"
        android:textSize="@dimen/login_fontSmall"
        android:text="@string/password_hint"
        android:layout_marginTop="4dp"/>

    <RelativeLayout
        android:id="@+id/rl_bottom_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/signup_createAccount_description_margin" >

        <TextView
            android:id="@+id/tv_bottom_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_createAccount_description_title"
            android:textColor="@color/signup_font_description_color"
            android:textSize="@dimen/login_fontSmall" />
        

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_bottom_description_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
            <TextView
	            android:id="@+id/tv_bottom_description_terms"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            
	            android:text="@string/signup_createAccount_description_terms"
	            android:textColor="@color/cl_link_font_color"
	            android:textSize="@dimen/login_fontSmall" />
	        
	        <TextView
	            android:id="@+id/tv_bottom_description_and"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/tv_bottom_description_terms"
	            android:layout_marginLeft="@dimen/signup_learnMore_margin"
	            android:layout_marginRight="@dimen/signup_learnMore_margin"
	            android:text="@string/signup_createAccount_description_and"
	            android:textColor="@color/signup_font_description_color"
	            android:textSize="@dimen/login_fontSmall" />
	        
	        <TextView
	            android:id="@+id/tv_bottom_description_policy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/tv_bottom_description_and"
	            android:text="@string/signup_createAccount_description_policy"
	            android:textColor="@color/cl_link_font_color"
	            android:textSize="@dimen/login_fontSmall" />
        </RelativeLayout>
        
        
    </RelativeLayout>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/sl_account_bottom_btn"
        android:paddingBottom="@dimen/login_marginMedium"
        android:paddingTop="@dimen/login_marginMedium"
        android:text="@string/cont"
        android:textColor="@color/word_white"
        android:textColorLink="@color/word_white"
        android:textSize="@dimen/login_fontMedium" />

</RelativeLayout>