<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingLeft="@dimen/dt_picker_dialog_padding_horiz"
    android:paddingRight="@dimen/dt_picker_dialog_padding_horiz">

   	<RelativeLayout 
   	    android:layout_width="fill_parent"
   		android:layout_height="@dimen/wifi_ap_info_dialog_title_height" 
   	    android:background="@drawable/wifisetup_password_inf_bg_up">
   	    <TextView 
	   	    android:id="@+id/txt_picker_title"
	   	    android:layout_width="match_parent"
	   		android:layout_height="wrap_content" 
	   		android:paddingLeft="@dimen/wifi_list_item_horizontal_padding" 
	   		android:textColor="@color/wifi_info_dialog_title_font_color"
	   		android:textSize="@dimen/wifi_ap_info_dialog_title_font_size"
	   		android:text="@string/cam_setting_title_cam_info"
	   		android:layout_centerVertical="true"/>
   	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@drawable/wifisetup_password_inf_bg_mid"
	    android:paddingBottom="@dimen/datetime_picker_desc_marginBottom">
   	    <View 
   	        android:layout_width="0dp"
	    	android:layout_height="1dp"
	    	android:layout_weight="1"/>
   	    <RelativeLayout 
   	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<net.simonvt.numberpicker.NumberPicker
		        android:id="@+id/numberPickerHour"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	    	<TextView 
	    	    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:text="@string/datetime_hour"
		        android:textColor="@color/picker_font_color"
		        android:layout_below="@+id/numberPickerHour"/>
   	    </RelativeLayout>
   	    <View 
   	        android:layout_width="@dimen/time_picker_horiz_distance"
	    	android:layout_height="1dp"/>
   	    <RelativeLayout 
   	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<net.simonvt.numberpicker.NumberPicker
		        android:id="@+id/numberPickerMinute"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	    	
	    	<TextView 
	    	    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:text="@string/datetime_min"
		        android:textColor="@color/picker_font_color"
		        android:layout_below="@+id/numberPickerMinute"/>
   	    </RelativeLayout>
   	    <View 
   	        android:layout_width="0dp"
	    	android:layout_height="1dp"
	    	android:layout_weight="1"/>
   	    
	</LinearLayout>
   	<LinearLayout 
        android:id="@+id/vg_button_holder"
        android:layout_width="match_parent"
   		android:layout_height="@dimen/wifi_ap_info_dialog_btn_height"
   		android:background="@drawable/wifisetup_password_inf_bg_diwn"
   		android:orientation="horizontal">
        <Button 
	       	android:id="@+id/btn_cancel"
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	   		android:layout_height="wrap_content"
	   		android:background="@drawable/sl_wifi_ap_dialog_cancel_btn_bg"
	   		android:textSize="@dimen/wifi_ap_info_dialog_btn_font_size"
	   		android:textColor="@color/csl_wifi_list_dialog_btn_font_color"
	   		android:text="@string/cancel"/>

        <Button 
	       	android:id="@+id/btn_ok"
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	   		android:layout_height="wrap_content"
	   		android:background="@drawable/sl_wifi_ap_dialog_connect_btn_bg"
	   		android:textSize="@dimen/wifi_ap_info_dialog_btn_font_size"
	   		android:textColor="@color/csl_wifi_list_dialog_btn_font_color"
	   		android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>